# driftbench

./: 404.html  README.md  api.html  benchmarking.html  data.html  detectors.html  generate_datasets.py  how_it_works.html  index.html  metrics.html  mkdocs.yml  objects.inv  pyproject.toml  run_benchmarks.py  setup.py
.github/workflows/: deploy_docs.yml  test_package.yml
data/: paper_datasets.yaml
docs/: api.md  benchmarking.md  data.md  detectors.md  how_it_works.md  index.md
driftbench/: __init__.py
driftbench/benchmarks/: data.py
driftbench/data_generation/: data_generator.py  drifts.py  latent_information.py  loaders.py  sample.py  solvers.py  visualize.py
driftbench/drift_detection/: detectors.py  helpers.py  metrics.py
search/: search_index.json
tests/benchmarks/: test_data.py
tests/data_generation/: test_data_generator.py  test_drifts.py  test_latent_information.py  test_loaders.py  test_sample.py  test_solvers.py  test_visualize.py
tests/drift_detection/: test_helpers.py  test_metrics.py
