[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'


[project]
name = 'driftbench'
authors = [
    { name = 'Edgar Wolf', email = 'edgar.wolf@hs-kempten.de' },
    { name = 'Tobias Windisch', email = 'tobias.windisch@hs-kempten.de' },
]
maintainers = [
    { name = 'Edgar Wolf', email = 'edgar.wolf@hs-kempten.de' },
]
description = 'Python tool to analyse process drifts'
dynamic = ['version']
readme = "README.md"
dependencies = [
   "jaxlib",
   "jax",
   "matplotlib==3.7.2",
   "numpy==1.24.4",
   "pandas==2.0.3",
   "scikit_learn==1.3.0",
   "scipy==1.12.0",
   "setuptools==68.1.2",
   "torch>=1.13.1",
   "pyyaml",
]


[project.optional-dependencies]
dev = [
   "pytest",
   "mkdocs",
   "mkdocs-material",
   "mkdocstrings-python",
   "mike",
]
cuda = ["jax[cuda]"]

[tool.setuptools.packages.find]
include = ['driftbench*']


[tool.setuptools.dynamic]
version = { file = 'VERSION' }


[tool.ruff]

select = [
  'E',   # pycodestyle
  'F',   # pyflakes
  'UP',  # pyupgrade
  'D',   # pydocstyle
  'PL',  # pylint
]
line-length = 120

[tool.ruff.pydocstyle]
convention = 'google'
